cmake_minimum_required(VERSION 3.2)
project(osu_iforest)
if (UNIX)
    message("Serialization of models can work good.")
add_definitions(-DSERIALIZATION=true)
endif (UNIX)
if (WIN32)
    message("Serialization don't work properly.")
endif(WIN32)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(iforestlib)
add_subdirectory(iforestlib)
#find_package(Armadillo REQUIRED)
#include_directories(${ARMADILLO_INCLUDE_DIRS})
include_directories(${SOURCE_FILES}/iforestlib/cereal)
set(SOURCE_FILES main.cpp)
add_executable(iforest ${SOURCE_FILES})

target_link_libraries(iforest iforestlib Clib) # ${ARMADILLO_INCLUDE_DIRS})
