project(osu_iforest)
add_definitions(-std=c++11)
include_directories(C)
include_directories(cereal)
add_subdirectory(C)
set(HEADER_FILES Tree.hpp Forest.hpp IsolationForest.hpp convForest.hpp utility.hpp cincl.hpp RForest.hpp main.hpp)
set(SOURCE_FILES Tree.cpp Forest.cpp IsolationForest.cpp convForest.cpp utility.cpp RForest.cpp BootstrapConvergence.cpp BootstrapConvergence.hpp OOBEstimator.hpp Contribution.hpp)
#add_subdirectory(Eigen)
add_library(iforestlib STATIC ${SOURCE_FILES} ${HEADER_FILES})
